debugging solution